Return Object or String
There are now two functions that return an Object or a String

--- a/FunctionsYard/test.html
+++ b/FunctionsYard/test.html
@@ -1,9 +1,12 @@
 <html>
-    <span id="MyId">text</span>
+    <span id="MyId1" style="background-color:cyan;">text</span>
+    <br>
+    <span id="MyId2" style="background-color:yellowgreen;">text</span>
     <script src="gptFunctions.js"></script>
     <script>
         function test() {
-            document.getElementById("MyId").innerText = (toTrainingFormat("Hello! How are \"you\" doing?", "I'm doing good, \"bro\"!"))
+            document.getElementById("MyId1").innerText = (JSON.stringify(toTrainingFormat("Hello! How are \"you\" doing?", "I'm doing good, \"bro\"!")));
+            document.getElementById("MyId2").innerText = (toTrainingString("Hello! How are \"you\" doing?", "I'm doing good, \"bro\"!"));
         }
         setTimeout(test, 1000);
     </script>
